# delta

./: .gitignore  chemprop_baseline.ipynb  config.py  data.py  delta_chemprop_clf.ipynb  delta_chemprop_clf_2.ipynb  delta_chemprop_clf_3.ipynb  delta_chemprop_clf_pred.ipynb  delta_chemprop_reg_2.ipynb  misc.py  pad.ipynb  pad_2.ipynb  provision_script.sh  pyproject.toml  stats.ipynb  stats_utils.py  test.ipynb  tuner.py  utils.py
baseline/: __init__.py  config.py
commons/: data.py  feature_pipeline.py
data/: __init__.py  loaders.py  preprocessing.py
datasets/: Derbyshire_malaria.csv  GSK_HepG2.csv  GSK_TBA_AH_JSFedit070425.xlsx  PK.csv
delta_clf/: baseline.ipynb  clf_2.ipynb  clf_3.ipynb  clf_4.ipynb  clf_5.ipynb  clf_6.ipynb  clf_7.ipynb  clf_8.ipynb  clf_9.ipynb  data.py
delta_reg/: delta_chemprop_reg.ipynb  delta_chemprop_reg_2.ipynb  reg_3.ipynb
deltaprop/: __init__.py  config.py  data.py  model.py
evaluate/: cli.py  config.py  data.py  generate_splits.py  train.py
evaluate_old/: evaluate_baseline.ipynb  evaluate_delta.ipynb  generate_splits.py
evaluate_tba/: baseline.ipynb  baseline.ipynb.ipynb  delta_data.py  delta_model.py  delta_prop.ipynb
experiments/: baseline.ipynb  clf_4.ipynb  clf_5.ipynb  clf_6.ipynb
experiments/commons/: data.py  utils.py
models/: abc.py  config.py
models/baseline/: __init__.py
models/deltaprop/: __init__.py  data.py  model.py  utils.py
models/xgboost_bl/: __init__.py  utils.py
tuning/: delta_data.py  delta_model.py  tune.ipynb  tune_baseline.ipynb  tune_delta.ipynb
